[gd_scene load_steps=2 format=3 uid="uid://dmpuu0hjtirl7"]

[ext_resource type="Script" path="res://scripts/enemy_detection_range.gd" id="1_7acxp"]

[node name="enemy_detection_range" type="Area2D"]
collision_mask = 2
script = ExtResource("1_7acxp")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
